--- a/inventory.ini
+++ b/inventory.ini
@@ -1,9 +1,13 @@
 [servers:children]
 db
 web
+dev
 
 [db]
   pg ansible_host=178.154.223.205
 
 [web]
   178.154.225.122
+
+[dev]
+  178.154.227.118
