--- a/inventory.ini
+++ b/inventory.ini
@@ -7,7 +7,7 @@ dev
   pg ansible_host=178.154.223.205
 
 [web]
-  178.154.225.122
+  websrv ansible_host=178.154.225.122
 
 [dev]
-  178.154.227.118
+  devsrv ansible_host=178.154.227.118
